welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:11: error: value lenght is not a member of Array[java.awt.Color]
	brosse(T(decalage%T.lenght))
                            ^Array2:15: error: value lenght is not a member of Array[java.awt.Color]
		brosse(T((i-1+decalage)%T.lenght))
                                          ^